api_ia_web/.k8s/08-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: api-ia-web
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
