api_ia_web/.k8s/12-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ia-web-ingress
  namespace: api-ia-web
spec:
  ingressClassName: nginx
  rules:
    - host: api-ia-web.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000

          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000

          - path: /health
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
